overflow-fix

--- a/frontend/css/financial-projections.css
+++ b/frontend/css/financial-projections.css
@@ -8,7 +8,7 @@
   padding: .5%;
 }
 .financials{
-  height: 100vh;
+  height:auto;
   width: 100%;
 }
 table, th, td {
